--- a/pipelines/ChIP-Seq/encode-wrapper/backend.conf
+++ b/pipelines/ChIP-Seq/encode-wrapper/backend.conf
@@ -4,71 +4,131 @@ backend {
   default = "Local"
   providers {
 
-    Local {
+    slurm_singularity {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
       config {
-        concurrent-job-limit = 6
+        script-epilogue = "sleep 30"
+        concurrent-job-limit = 50
+        runtime-attributes = """
+          Int cpu = 1
+          Int? gpu
+          Int? time
+          Int? memory_mb
+          String? slurm_partition
+          String? slurm_account
+          String? slurm_extra_param
+          String singularity_container
+          String? singularity_bindpath
+        """
+        submit = """
+          ls ${singularity_container} $(echo ${singularity_bindpath} | tr , ' ') 1>/dev/null && (sbatch \
+          --export=ALL \
+          -J ${job_name} \
+          -D ${cwd} \
+          -o ${out} \
+          -e ${err} \
+          ${"-t " + time*60} \
+          -n 1 \
+          --ntasks-per-node=1 \
+          ${"--cpus-per-task=" + cpu} \
+          ${"--mem=" + memory_mb} \
+          ${"-p " + slurm_partition} \
+          ${"--account " + slurm_account} \
+          ${"--gres gpu:" + gpu} \
+          ${slurm_extra_param} \
+          --wrap "chmod u+x ${script} && SINGULARITY_BINDPATH=$(echo ${cwd} | sed 's/cromwell-executions/\n/g' | head -n1),${singularity_bindpath} singularity exec --home ${cwd} ${if defined(gpu) then '--nv' else ''} ${singularity_container} ${script}")
+        """
+        kill = "scancel ${job_id}"
+        check-alive = "squeue -j ${job_id}"
+        job-id-regex = "Submitted batch job (\\d+).*"
       }
     }
 
-    singularity-instance {
+    sge_singularity {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
       config {
-        concurrent-job-limit = 6
+        script-epilogue = "sleep 30 && sync"
+        concurrent-job-limit = 50
         runtime-attributes = """
-        String? singularity_container
-        String? singularity_instance_name
+          String sge_pe = "shm"
+          Int cpu = 1
+          Int? gpu
+          Int? time
+          Int? memory_mb
+          String? sge_queue
+          String? sge_extra_param
+          String singularity_container
+          String? singularity_bindpath
         """
         submit = """
-        chmod u+x ${script} && \
-        singularity instance start ${singularity_container} ${singularity_instance_name} && \
-        singularity \
-        exec \
-        instance://${singularity_instance_name} \
-        ${script}
+          ls ${singularity_container} $(echo ${singularity_bindpath} | tr , ' ') 1>/dev/null && (echo "chmod u+x ${script} && SINGULARITY_BINDPATH=$(echo ${cwd} | sed 's/cromwell-executions/\n/g' | head -n1),${singularity_bindpath} singularity exec --home ${cwd} ${if defined(gpu) then '--nv' else ''} ${singularity_container} ${script}" | qsub \
+          -S /bin/sh \
+          -terse \
+          -b n \
+          -N ${job_name} \
+          -wd ${cwd} \
+          -o ${out} \
+          -e ${err} \
+          ${if cpu>1 then "-pe " + sge_pe + " " + cpu else " "} \
+          ${"-l h_vmem=" + memory_mb/cpu + "m"} \
+          ${"-l s_vmem=" + memory_mb/cpu + "m"} \
+          ${"-l h_rt=" + time*3600} \
+          ${"-l s_rt=" + time*3600} \
+          ${"-q " + sge_queue} \
+          ${"-l gpu=" + gpu} \
+          ${sge_extra_param} \
+          -V)
         """
+        kill = "qdel ${job_id}"
+        check-alive = "qstat -j ${job_id}"
         job-id-regex = "(\\d+)"
-        check-alive = "pgrep -fa gemBS"
-        kill = "singularity instance stop gemBS"
       }
     }
 
     singularity {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
       config {
-        concurrent-job-limit = 6
+        script-epilogue = "sleep 5 && sync"
+        concurrent-job-limit = 10
         runtime-attributes = """
-        String? singularity_container
+          Int? gpu
+          String singularity_container
+          String? singularity_bindpath
         """
         submit = """
-        chmod u+x ${script} ;
-        singularity \
-        exec \
-        ${singularity_container} \
-        ${script} &
-		echo $!
+          ls ${singularity_container} $(echo ${singularity_bindpath} | tr , ' ') 1>/dev/null && (chmod u+x ${script} && SINGULARITY_BINDPATH=$(echo ${cwd} | sed 's/cromwell-executions/\n/g' | head -n1),${singularity_bindpath} singularity exec --home ${cwd} ${if defined(gpu) then '--nv' else ''} ${singularity_container} ${script} & echo $! && disown)
         """
         job-id-regex = "(\\d+)"
-        check-alive = "ps -ef | grep ${job_id}" 
+        check-alive = "ps -ef | grep -v grep | grep ${job_id}" 
         kill = "kill -9 ${job_id}"
+      }
+    }
+
+    Local {
+      actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
+      config {
+        concurrent-job-limit = 10
       }
     }
 
     sge {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
       config {
-        concurrent-job-limit = 6
+        script-epilogue = "sleep 30 && sync"
+        concurrent-job-limit = 50
         runtime-attributes = """
         String sge_pe = "shm"
         Int cpu = 1
+        Int? gpu
         Int? time
         Int? memory_mb
         String? sge_queue
+        String? sge_extra_param
         """
         submit = """
         qsub \
+        -S /bin/sh \
         -terse \
-        -V \
         -b n \
         -N ${job_name} \
         -wd ${cwd} \
@@ -80,6 +140,9 @@ backend {
         ${"-l h_rt=" + time*3600} \
         ${"-l s_rt=" + time*3600} \
         ${"-q " + sge_queue} \
+        ${"-l gpu=" + gpu} \
+        ${sge_extra_param} \
+        -V \
         ${script}
         """
         kill = "qdel ${job_id}"
@@ -91,12 +154,16 @@ backend {
     slurm {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
       config {
-        concurrent-job-limit = 6
+        script-epilogue = "sleep 30"
+        concurrent-job-limit = 50        
         runtime-attributes = """
         Int cpu = 1
+        Int? gpu
         Int? time
         Int? memory_mb
         String? slurm_partition
+        String? slurm_account
+        String? slurm_extra_param
         """
         submit = """
         sbatch \
@@ -111,6 +178,9 @@ backend {
         ${"--cpus-per-task=" + cpu} \
         ${"--mem=" + memory_mb} \
         ${"-p " + slurm_partition} \
+        ${"--account " + slurm_account} \
+        ${"--gres gpu:" + gpu} \
+        ${slurm_extra_param} \
         --wrap "/bin/bash ${script}"
         """
         kill = "scancel ${job_id}"
@@ -149,13 +219,23 @@ backend {
   }
 }
 
+services {
+  LoadController {
+    class = "cromwell.services.loadcontroller.impl.LoadControllerServiceActor"
+    config {      
+      # disable it (for login nodes on Stanford SCG, Sherlock)
+      control-frequency = 21474834 seconds
+    }
+  }
+}
+
 system {
   abort-jobs-on-terminate = true
   graceful-server-shutdown = true
 }
 
 call-caching {
-  enabled = true
+  enabled = false
   invalidate-bad-cache-results = true
 }
 
